--- a/FilesCompare/View/MainWindow.xaml
+++ b/FilesCompare/View/MainWindow.xaml
@@ -214,11 +214,11 @@
                 </Style>
             </Button.Style>
         </Button>
-        <Grid Grid.Row="3" Grid.RowSpan="1" Grid.Column="1" Grid.ColumnSpan="3" >
+        <Grid x:Name="gdRes" Grid.Row="3" Grid.RowSpan="1" Grid.Column="1" Grid.ColumnSpan="3" >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
+                <ColumnDefinition />
                 <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="200"/>
+                <ColumnDefinition x:Name="clnLog" Width="200"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
                 <!--<ScrollViewer HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">-->
@@ -461,7 +461,7 @@
         </TextBlock>
         <TextBlock Grid.Column="2"
                    Grid.Row="5"
-                   FontSize="12"
+                   FontSize="15"
                    Text="{Binding UnzipFileName, UpdateSourceTrigger=PropertyChanged, StringFormat=当前状态:{0}}">
         </TextBlock>
         <TextBlock Grid.Column="3"
