--- a/FilesCompare/View/MainWindow.xaml
+++ b/FilesCompare/View/MainWindow.xaml
@@ -111,13 +111,13 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Column="0" Grid.Row="0" Text="黑名单※" FontFamily="幼圆"/>
-            <TextBox Button.Click="TextBox_Click_Ignore" IsReadOnly="True"  Grid.Row="0" TabIndex="0" Grid.Column="1" ToolTip="{Binding Text,RelativeSource={RelativeSource Self}}" HorizontalContentAlignment="Center" TextWrapping="NoWrap" Text="{Binding Ignore, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}">
+            <TextBox x:Name="txtBlack" Button.Click="TextBox_Click_Ignore" IsReadOnly="True"  Grid.Row="0" TabIndex="0" Grid.Column="1" ToolTip="{Binding Text,RelativeSource={RelativeSource Self}}" HorizontalContentAlignment="Center" TextWrapping="NoWrap" Text="{Binding Ignore, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}">
             </TextBox>
-            <ctrl:PopubEx x:Name="pupIgnore" Placement="Mouse" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
+            <ctrl:PopubEx x:Name="pupIgnore" AllowsTransparency="True" PlacementTarget="{Binding ElementName=txtBlack}" Placement="Bottom" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
                 <Border BorderBrush="Black" BorderThickness="0.55" Background="White">
                     <StackPanel Background="White" Orientation="Vertical" Margin="5">
                         <TextBlock Background="DimGray" Foreground="White" Text="设置黑名单" HorizontalAlignment="Stretch" TextAlignment="Center"/>
-                        <TextBlock Background="DimGray" Foreground="White" FontSize="13" Text="注意:&#13;        若文件(全路径名)包含黑名单列表中关键字&#13;则该文件将被忽略(不做校对,且不会出现在结果中)" TextWrapping="Wrap"/>
+                        <TextBlock Background="DimGray" Foreground="White" HorizontalAlignment="Stretch" FontSize="13" Text="注意:&#13;        若文件(全路径名)包含黑名单列表中关键字&#13;则该文件将被忽略(不做校对,且不会出现在结果中)" TextWrapping="Wrap"/>
                         <DataGrid MinHeight="100" MaxHeight="450" HeadersVisibility="Column" ItemsSource="{Binding Ignores, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" AutoGenerateColumns="False">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="文件名或关键字" Width="280" Binding="{Binding Value}"></DataGridTextColumn>
@@ -132,12 +132,12 @@
                 </Border>
             </ctrl:PopubEx>
             <TextBlock Grid.Column="2" Grid.Row="0" Text="白名单√" FontFamily="幼圆"/>
-            <TextBox Grid.Row="0" IsReadOnly="True" Button.Click="TextBox_Click_Prefer"  TabIndex="1" Grid.Column="3" ToolTip="{Binding Text,RelativeSource={RelativeSource Self}}" HorizontalContentAlignment="Center" TextWrapping="NoWrap" Text="{Binding Prefer, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}"/>
-            <ctrl:PopubEx x:Name="pupPrefer" Placement="Mouse" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
+            <TextBox x:Name="txtWhite" Grid.Row="0" IsReadOnly="True" Button.Click="TextBox_Click_Prefer"  TabIndex="1" Grid.Column="3" ToolTip="{Binding Text,RelativeSource={RelativeSource Self}}" HorizontalContentAlignment="Center" TextWrapping="NoWrap" Text="{Binding Prefer, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}"/>
+            <ctrl:PopubEx x:Name="pupPrefer" AllowsTransparency="True" PlacementTarget="{Binding ElementName=txtWhite}" Placement="Bottom"  PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
                 <Border BorderBrush="Black" BorderThickness="0.55" Background="White">
                     <StackPanel Background="White" Orientation="Vertical" Margin="5">
                         <TextBlock Background="DimGray" Foreground="White" Text="设置白名单" HorizontalAlignment="Stretch" TextAlignment="Center"/>
-                        <TextBlock Background="DimGray" Foreground="White" FontSize="13" Text="注意:&#13;       仅在文件(全路径名)包含白名单列表中关键字时,&#13;才会对该文件进行比对！不在白名单中的文件将被忽略" TextWrapping="Wrap"/>
+                        <TextBlock Background="DimGray" Foreground="White" HorizontalAlignment="Stretch" FontSize="13" Text="注意:&#13;       仅在文件(全路径名)包含白名单列表中关键字时,&#13;才会对该文件进行比对！不在白名单中的文件将被忽略" TextWrapping="Wrap"/>
                         <DataGrid MinHeight="100" MaxHeight="450" HeadersVisibility="Column" ItemsSource="{Binding Prefers, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" AutoGenerateColumns="False">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="文件名或关键字" Width="308" Binding="{Binding Value, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></DataGridTextColumn>
