--- a/FilesCompare/View/WinTips.xaml
+++ b/FilesCompare/View/WinTips.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FilesCompare.View.WinHelp"
+﻿<Window x:Class="FilesCompare.View.WinTips"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Height="200" Width="400"
@@ -26,7 +26,7 @@
                 <can:ParticleCanvas IsEnabled="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Direction="Shine" MinSpeed="1" MaxSpeed="5" Width="400" ParticlesBrush="LightCyan" MinSize="5" MaxSize="5" ParticlesCount="100" Height="200" X1="5" X2="395" Y1="0" Y2="0" IsShowParticles="True">
                 </can:ParticleCanvas>
             </can:AdornedControl.AdornerContent>
-            <TextBlock x:Name="txtMess" VerticalAlignment="Center" FontSize="25" HorizontalAlignment="Center" Text="正在处理结果中..." FontFamily="幼圆" Grid.Column="1" Grid.Row="1">
+            <TextBlock x:Name="txtMess" VerticalAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" FontSize="25" HorizontalAlignment="Center" Text="正在处理结果中..." FontFamily="幼圆" Grid.Column="1" Grid.Row="1">
                 <TextBlock.TextEffects>
                     <TextEffect x:Name="ef" PositionStart="0" PositionCount="1" >
                         <TextEffect.Transform>
