--- a/FilesCompare/Style/ybx_GraySimpleStyle.xaml
+++ b/FilesCompare/Style/ybx_GraySimpleStyle.xaml
@@ -209,7 +209,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Border x:Name="bd" BorderBrush="Black" BorderThickness="0.8" Margin="1" Background="{TemplateBinding Background}" Opacity="0.9">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"></ContentPresenter>
+                        <ContentPresenter x:Name="cp" HorizontalAlignment="Center" VerticalAlignment="Center"></ContentPresenter>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -223,9 +223,9 @@
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
                             <Setter Property="Foreground" Value="White"/>
-                            <Setter Property="RenderTransform">
+                            <Setter Property="RenderTransform" TargetName="cp">
                                 <Setter.Value>
-                                    <ScaleTransform ScaleX="0.98" ScaleY="0.98" CenterX="50" CenterY="25" />
+                                    <TranslateTransform X="1" Y="1"/>
                                 </Setter.Value>
                             </Setter>
                         </Trigger>
